@@ -551,9 +551,9 @@ spu_look_up_symbols (void)
 
 /* Send signal to inferior.  */
 static void
-spu_send_signal (int signo)
+spu_request_interrupt (void)
 {
-  syscall (SYS_tkill, current_tid, signo);
+  syscall (SYS_tkill, current_tid, SIGINT);
 }
 
 static const char *
@@ -576,7 +576,7 @@ static struct target_ops spu_target_ops = {
   spu_read_memory,
   spu_write_memory,
   spu_look_up_symbols,
-  spu_send_signal,
+  spu_request_interrupt,
   NULL,
   NULL,
   NULL,
